--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="node_modules/modern-normalize/modern-normalize.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>goit-react-hw-03</title>
   </head>
   <body>
     <div id="root"></div>
